--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,8 +2,21 @@
 
 .bg-footer {
   background-color: #000;
-  padding: 50px 0 30px;
+  padding: 70px 0 35px;
 } 
+
+.container{
+  margin-bottom: -5px;
+}
+
+@media screen and (max-width: 991px) {
+  .fCol {
+    margin-bottom: 50px;
+  }
+  .container{
+    margin-bottom: -50px;
+  }
+}
 
 .footer-heading {
   letter-spacing: 2px;
