--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,16 +2,16 @@
 
 .bg-footer {
   background-color: #000;
-  padding: 70px 0 35px;
+  padding: 55px 55px 60px;
 } 
 
 .container{
-  margin-bottom: -5px;
+  margin-bottom: -20px;
 }
 
 @media screen and (max-width: 991px) {
   .fCol {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
   }
   .container{
     margin-bottom: -50px;
@@ -19,12 +19,13 @@
 }
 
 .footer-heading {
-  letter-spacing: 2px;
+  letter-spacing: 5px;
 }
+
 
 .footer-link a {
   color: white;
-  line-height: 40px;
+  line-height: 30px;
   font-size: 14px;
   transition: all 0.5s;
   text-decoration: none;
@@ -32,6 +33,8 @@
 
 .footer-link a:hover {
   color: #fe8235;
+  line-height: 40px;
+  border-bottom: 0.5px solid #fe8235;
 }
 
 .contact-info {
@@ -43,10 +46,14 @@
   color: white;
 }
 
+.footer-alt :hover {
+  color: #fe8235;
+}
+
 .footer-heading {
   position: relative;
   padding-bottom: 12px;
-  border-bottom: 1px solid #fe8235;
+  border-bottom: 2.5px solid #fe8235;
   width: 150px;
 }
 
