--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,7 +2,8 @@
 
 .bg-footer {
   background-color: #000;
-  padding: 55px 55px 60px;
+  padding: 0px 35px 40px;
+  /* border-top: 1px solid #fe8235; */
 } 
 
 .container{
@@ -48,13 +49,14 @@
 
 .footer-alt :hover {
   color: #fe8235;
-}
+} 
 
 .footer-heading {
   position: relative;
-  padding-bottom: 12px;
+  padding-bottom: 10px;
   border-bottom: 2.5px solid #fe8235;
   width: 150px;
+  margin-bottom: -10px;
 }
 
 .copyright{
