--- a/src/Components/ShopFeed/mSection/Mfeed.css
+++ b/src/Components/ShopFeed/mSection/Mfeed.css
@@ -3,7 +3,7 @@
     background: black;
     /* border: 1px solid red; */
     position: relative;
-    box-sizing: border-box;
+    font-family: 'Maven Pro', sans-serif;
 }
 
 /* mens heading css */
