--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,7 +2,7 @@
 
 .bg-footer {
   background-color: #000;
-  padding: 0px 35px 40px;
+  padding: 10px 35px 40px;
   /* border-top: 1px solid #fe8235; */
 } 
 
@@ -20,7 +20,8 @@
 }
 
 .footer-heading {
-  letter-spacing: 5px;
+  letter-spacing: 3px;
+  font-weight: 700;
 }
 
 
@@ -30,6 +31,7 @@
   font-size: 14px;
   transition: all 0.5s;
   text-decoration: none;
+  font-weight: 500;
 }
 
 .footer-link a:hover {
@@ -41,6 +43,7 @@
 .contact-info {
   color: white;
   font-size: 14px;
+  font-weight: 500;
 }
 
 .footer-alt {
@@ -55,12 +58,13 @@
   position: relative;
   padding-bottom: 10px;
   border-bottom: 2.5px solid #fe8235;
-  width: 150px;
+  width: 130px;
   margin-bottom: -10px;
 }
 
 .copyright{
   position: relative;
   top: 5px;
+  font-weight: 500;
 }
 
