--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,8 +1,12 @@
 /* navbar css */
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap');
+
 
 .navbar {
   min-height: 10vh;
   background: #fe8235;
+  font-family: 'Maven Pro', sans-serif;
+  font-weight: 600;
 }
 
 .navbar-brand {
