--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,7 @@
 
 body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Maven Pro', sans-serif;
+  background: black;
 }
 
