--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -3,10 +3,13 @@
 .bg-footer {
   background-color: #000;
   padding: 10px 35px 40px;
+  /* border: 1px solid red; */
 } 
 
 .container{
   margin-bottom: -20px;
+  /* border: 1px solid red; */
+  max-width: 100vw;
 }
 
 @media screen and (max-width: 991px) {
@@ -43,6 +46,15 @@
   color: white;
   font-size: 14px;
   font-weight: 500;
+}
+
+.contact-info-icon{
+  color: white;
+  margin-right: 10px;
+}
+
+.contact-info-icon:hover{
+  color: #fe8235;
 }
 
 .footer-alt {
