--- a/src/Components/ShopFeed/BoysField/Feeds/feed.css
+++ b/src/Components/ShopFeed/BoysField/Feeds/feed.css
@@ -3,10 +3,12 @@
     background: black;
     position: relative;
     font-family: 'Maven Pro', sans-serif;
-    padding-top: 35px;
+    padding: 25px 33px 0px 37px;
     /* border: 1px solid blue; */
 }
 
+
+/* 
 .main{
     display: flex;
 }
@@ -17,4 +19,4 @@
     flex-direction: column;
     align-items: center;
     width: auto;
-} 
+}  */
