--- a/src/Components/ShopFeed/BoysField/BoysPanels/BoysPanel.css
+++ b/src/Components/ShopFeed/BoysField/BoysPanels/BoysPanel.css
@@ -1,19 +1,48 @@
-.sfc{
-    padding-top: 40px;
-    height: 550px;
+.BoysPanel{
+    /* margin-top: 20px; */
+    padding-top: 20px;
+    /* height: 550px; */
     background: black;
-    /* border: 1px solid turquoise; */
+    /* border: 2px solid turquoise; */
 } 
 
-.navSelection{
+.BoysnavSelection{
     display: flex;
     flex: row;
     justify-content: center; 
+    margin-top: 70px;
 }
 
-@media screen and (max-width: 400px) {
-    .sfc{
-        padding-top: 40px;
-        height: 490px;
+@media screen and (max-width: 575px) {
+    .BoysPanel{
+        padding-top: 20px;
     } 
-  }
+  }  
+/* 
+  @media screen and (min-width: 1400px) {
+    .BoysPanel{
+        margin-top: 30px;
+        padding-top: 30px;
+    } 
+  }  */
+
+  @media screen and (max-width: 327px) {
+    .BoysPanel{
+        padding-top: 90px;
+    } 
+  }  
+
+  @media screen and (max-width: 326px) {
+    .BoysPanel{
+      padding-top: 10px;
+  } 
+}
+
+  .btn{
+    border: none;
+    font-size:large;
+}
+.btn:hover{
+    color: #fe8235;
+    background: black;
+}
