--- a/src/Components/ShopFeed/BoysField/BoysPanels/BoysPanel.css
+++ b/src/Components/ShopFeed/BoysField/BoysPanels/BoysPanel.css
@@ -7,7 +7,7 @@
 } 
 
 .BoysnavSelection{
-    display: flex;
+    display: flex; 
     flex: row;
     justify-content: center; 
     margin-top: 70px;
@@ -46,3 +46,22 @@
     color: #fe8235;
     background: black;
 }
+
+.boysnavigator{
+  color: #fe8235;
+  position: relative;
+  float: right;
+  bottom: 310px;
+  right: 10px;
+}
+
+.boysnavigator:hover{
+  color: white;
+}
+
+
+@media screen and (max-width: 400px) {
+  .boysnavigator{
+      right: 6px;
+  }
+} 
