--- a/src/Components/ShopFeed/GirlsField/GirlsPanels/GirlsPanel.css
+++ b/src/Components/ShopFeed/GirlsField/GirlsPanels/GirlsPanel.css
@@ -11,13 +11,27 @@
     justify-content: center; 
 }
 
+
+
 .btn{
     border: none;
-    font-size:large;
-} 
+    font-size: large; 
+}  
 .btn:hover{
     color: #fe8235; 
     background: black;
+} 
+
+.navigator{
+    color: #fe8235;
+    position: relative;
+    float: right;
+    bottom: 370px;
+    right: 10px;
+}
+
+.navigator:hover{
+    color: white;
 }
 
 @media screen and (max-width: 575px) {
@@ -25,4 +39,15 @@
         padding-top: 40px;
         height: 500px;
     } 
+    .navHeading{
+        font-size: medium;
+    }
+  }     
+
+@media screen and (max-width: 400px) {
+    .navigator{
+        right: 6px;
+        bottom: 350px;
+    }
   } 
+
