--- a/src/Components/TypeWriter/TWAnimation.css
+++ b/src/Components/TypeWriter/TWAnimation.css
@@ -35,6 +35,7 @@
 @media screen and (max-width: 575px) {
     .Animation{
         font-size: 30px;
+        padding: 0px 0 0 40px;
     }
     .TWAnimation{
         margin-top: 100px;
