--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,14 +2,17 @@
 
 .bg-footer {
   background-color: #000;
-  padding: 10px 35px 40px;
+  padding: 0px 25px 0px;
   /* border: 1px solid red; */
 } 
 
 .container{
   margin-bottom: -20px;
+  width: 100%;
+}
+.fCol{
   /* border: 1px solid red; */
-  max-width: 100vw;
+  width: auto;
 }
 
 @media screen and (max-width: 991px) {
@@ -32,7 +35,7 @@
   line-height: 30px;
   font-size: 14px;
   transition: all 0.5s;
-  text-decoration: none;
+  text-decoration: none; 
   font-weight: 500;
 }
 
@@ -50,7 +53,7 @@
 
 .contact-info-icon{
   color: white;
-  margin-right: 10px;
+  margin-right: 6px;
 }
 
 .contact-info-icon:hover{
@@ -69,7 +72,7 @@
   position: relative;
   padding-bottom: 10px;
   border-bottom: 2.5px solid #fe8235;
-  width: 130px;
+  width: 121px;
   margin-bottom: -10px;
 }
 
