--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -4,6 +4,7 @@
   background-color: #000;
   padding: 0px 25px 0px;
   /* border: 1px solid red; */
+  font-family: "Maven Pro", sans-serif;;
 } 
 
 .container{
