--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -75,8 +75,8 @@
   outline: 0;
   padding: 5px 10px;
   font-weight: 500;
-  color: black;
-  background-color: whitesmoke;
+  color: white;
+  background-color: black;
   text-align: center;
   cursor: pointer;
   font-size: 15px;
@@ -84,7 +84,7 @@
 }
 
 .navbtn:hover {
-  color: white;
-  background-color: black;
-  transition: all 0.8s ease-in;
+  color: black;
+  background-color: white;
+  transition: all 0.5s ease-in-out;
 }
