--- a/src/Components/ShopFeed/Source/Cards.css
+++ b/src/Components/ShopFeed/Source/Cards.css
@@ -17,21 +17,23 @@
   color: white;
   font-size: 15px;
   margin-bottom: 10px;
+  font-family: "Maven Pro", sans-serif;
 } 
 
 h6 {
   margin-top: 15px;
   color: white;
+  font-family: "Maven Pro", sans-serif;
 }
 
 .card .button {
   border: none;
-  outline: 0;
+  outline: 0; 
   padding: 5px 10px;
   font-weight: 500;
   color: black;
   background-color: whitesmoke;
-  text-align: center;
+  text-align: center; 
   cursor: pointer;
   font-size: 15px;
   font-family: "Maven Pro", sans-serif;
@@ -50,4 +52,4 @@ h6 {
   }
 }
 
- 
+  
