--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -3,7 +3,8 @@
 
 
 .navbar {
-  min-height: 80px;
+  /* min-height: 80px; */
+  min-height: 11vh;
   background: #fe8235;
   font-family: 'Maven Pro', sans-serif;
   font-weight: 600;
@@ -36,12 +37,12 @@
 @media screen and (max-width: 575px) {
   .navbar {
     min-height: 40px;
-  }
+  } 
 }
 
 .navbar-toggler{
   height: auto;
-  border-color: #fe8235;
+  /* border-color: #fe8235; */
   transform: rotate(270deg);
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.4);
 }
@@ -75,7 +76,6 @@
   outline: 0;
   padding: 5px 10px;
   font-weight: 500;
-  color: white;
   background-color: black;
   text-align: center;
   cursor: pointer;
