code format prettier

--- a/src/Components/TypeWriter/TWAnimation.css
+++ b/src/Components/TypeWriter/TWAnimation.css
@@ -1,55 +1,50 @@
-@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap");
 
-.TWAnimation{
-    /* border: 1px solid red; */
+.Animation {
+  color: white;
+  padding: 0px 0 0 45px;
+  margin: auto 0;
+  font-weight: normal;
+  font-size: 90px;
+  font-family: "Maven Pro", sans-serif;
+  font-weight: 900;
 }
 
-.Animation{
-    color: white;
-    padding: 0px 0 0 45px;
-    margin: auto 0;
-    font-weight: normal;
-    font-size: 90px;
-    font-family: 'Maven Pro', sans-serif;
-    font-weight: 900;
-}
-
-
-.eraseAnimation{
-    color: #fe8235;
-    font-weight: bold;
-    font-family: 'Maven Pro', sans-serif;
-    font-weight: 900;
+.eraseAnimation {
+  color: #fe8235;
+  font-weight: bold;
+  font-family: "Maven Pro", sans-serif;
+  font-weight: 900;
 }
 
 @media screen and (max-width: 991px) {
-    .Animation{
-        font-size: 70px;
-    }
-} 
+  .Animation {
+    font-size: 70px;
+  }
+}
 @media screen and (max-width: 767px) {
-    .Animation{
-        font-size: 50px;
-    }
+  .Animation {
+    font-size: 50px;
+  }
 }
 @media screen and (max-width: 575px) {
-    .Animation{
-        font-size: 30px;
-        padding: 0px 0 0 40px;
-    }
-    .TWAnimation{
-        margin-top: 100px;
-    }
-} 
+  .Animation {
+    font-size: 30px;
+    padding: 0px 0 0 40px;
+  }
+  .TWAnimation {
+    margin-top: 100px;
+  }
+}
 
 @media screen and (max-width: 400px) {
-    .TWAnimation{
-        margin-top: 60px;
-    }
+  .TWAnimation {
+    margin-top: 60px;
+  }
 }
 
 @media screen and (max-width: 326px) {
-    .TWAnimation{
-        margin-top: 90px;
-    }
+  .TWAnimation {
+    margin-top: 90px;
+  }
 }
