--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,52 +1,52 @@
 /* navbar css */
-@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap");
 
 .navbar {
-  /* min-height: 80px; */
   min-height: 11vh;
   background: #fe8235;
-  font-family: 'Maven Pro', sans-serif;
+  font-family: "Maven Pro", sans-serif;
   font-weight: 600;
+  /* border: 10px solid rebeccapurple; */
 }
-  
+
 .navbar-brand {
-  font-size: xx-large; 
+  font-size: xx-large;
   font-weight: bolder;
   cursor: pointer;
 }
 
-@media screen and (max-width: 991px) { 
+@media screen and (max-width: 991px) {
   .basket {
-    margin: 10px 0; 
-  } 
-
-  .navbar-toggler{
-    padding: 8px 5px;
+    margin: 10px 0;
+  }
+  .navbar-toggler {
+    padding: 6px 3.5px;
     padding-bottom: 3px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .navbar-brand {
-    font-size: x-large;
-    font-weight: 900;
+  .navbar {
+    min-height: 9vh;
   }
 }
 
 @media screen and (max-width: 575px) {
+  .navbar-brand {
+    font-size: x-large;
+    font-weight: 900;
+  }
   .navbar {
-    min-height: 40px;
-  } 
+    min-height: 9vh;
+  }
 }
 
-.navbar-toggler{
+.navbar-toggler {
   height: auto;
   /* border-color: #fe8235; */
   transform: rotate(270deg);
-  box-shadow: 0 3px 10px rgb(0 0 0 / 0.4);
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.5);
 }
-
 
 .counting {
   color: white;
@@ -65,7 +65,7 @@
   margin-left: 10px;
 }
 
-.btn{
+.btn {
   background: black;
   color: white;
   margin-bottom: 10px;
