--- a/src/Components/ShopFeed/BoysField/Feeds/Boysfeed.css
+++ b/src/Components/ShopFeed/BoysField/Feeds/Boysfeed.css
@@ -1,15 +1,15 @@
-.Boysfeed{
-    height: 450px;
-    background: black;
-    position: relative;
-    font-family: 'Maven Pro', sans-serif;
-    padding: 25px 35px 0px 35px;
-    /* border: 3px solid blue; */
+.Boysfeed {
+  height: 450px;
+  background: black;
+  position: relative;
+  font-family: "Maven Pro", sans-serif;
+  padding: 25px 35px 0px 35px;
+  /* border: 3px solid blue; */
 }
 
 @media screen and (max-width: 400px) {
-    .Boysfeed{
-        max-height: 400px;
-        padding: 25px 25px 0px 25px;
-    }
-  } 
+  .Boysfeed {
+    max-height: 400px;
+    padding: 25px 25px 0px 25px;
+  }
+}
