--- a/src/Components/ShopFeed/GirlsField/Feeds/Girlsfeed.css
+++ b/src/Components/ShopFeed/GirlsField/Feeds/Girlsfeed.css
@@ -1,16 +1,15 @@
-.Girlsfeed{
-    height: 450px;
-    background: black;
-    position: relative;
-    font-family: 'Maven Pro', sans-serif;
-    padding: 25px 35px 0px 35px;
-    /* border: 2px solid red; */
+.Girlsfeed {
+  height: 450px;
+  background: black;
+  position: relative;
+  font-family: "Maven Pro", sans-serif;
+  padding: 25px 35px 0px 35px;
+  /* border: 2px solid red; */
 }
 
 @media screen and (max-width: 400px) {
-    .Girlsfeed{
-        max-height: 400px;
-        padding: 25px 25px 0px 25px;
-    }
+  .Girlsfeed {
+    max-height: 400px;
+    padding: 25px 25px 0px 25px;
   }
-     
+}
