--- a/src/Components/SignIn/SignIn.css
+++ b/src/Components/SignIn/SignIn.css
@@ -1,101 +1,102 @@
 .signincontainer {
-    box-sizing: border-box;
-    position: relative;
-    max-width: 450px;
-    padding: 100px 70px;
-    background-color: rgba(0, 0, 0, 0.7);
-    margin: 0px auto 10px auto;
-    height: 89vh;
-    font-family: "Maven Pro", sans-serif;
+  box-sizing: border-box;
+  position: relative;
+  max-width: 450px;
+  padding: 100px 70px;
+  background-color: rgba(0, 0, 0, 0.7);
+  margin: 0px auto 10px auto;
+  height: 89vh;
+  font-family: "Maven Pro", sans-serif;
 }
 
-@media screen and (max-width: 575px){
-    .signincontainer{
-        padding: 50px 45px;
-    }
+@media screen and (max-width: 575px) {
+  .signincontainer {
+    padding: 50px 45px;
+  }
 }
 
-.signininput{
-    width: 100%;
-    height: 40px;
-    padding: 15px;
-    margin: 5px 0 10px 0;
-    border: none;
-    background: #f1f1f1;
-    border-radius: 5px;
-}
-  
-.signinbtn{
-    display: block;
-    height: 40px;
-    width: 100%;
-    background-color: #fe8235;
-    border-radius: 5px;
-    border: none;
-    margin: 25px 0 0 0;
-    cursor: pointer;
+.signininput {
+  width: 100%;
+  height: 40px;
+  padding: 15px;
+  margin: 5px 0 10px 0;
+  border: none;
+  background: #f1f1f1;
+  border-radius: 5px;
 }
 
-.signinnav{
-    display: block;
+.signinbtn {
+  display: block;
+  height: 40px;
+  width: 100%;
+  background-color: #fe8235;
+  border-radius: 5px;
+  border: none;
+  margin: 25px 0 0 0;
+  cursor: pointer;
 }
 
+.signinnav {
+  display: block;
+}
 
 /* sjicjsjskj */
 
 .firstLine {
-	width: 100%;
-	display: flex;
-    justify-content: space-between;
-	font-size: 0.9em;
-    margin-top: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.9em;
+  margin-top: 10px;
 }
 
-.firstLineL{
-    margin-left: 6px;
+.firstLineL {
+  margin-left: 6px;
 }
 
 .fcbk {
-	width: 100%;
-	display: flex;
-	font-size: 0.8em;
-    margin-top: 10px;
+  width: 100%;
+  display: flex;
+  font-size: 0.8em;
+  margin-top: 10px;
 }
 
 .fcbk img {
-	width: 20px;
-	margin-right: 10px;
+  width: 20px;
+  margin-right: 10px;
 }
 
 .signup {
-	width: 100%;
-	display: flex;
+  width: 100%;
+  display: flex;
 }
 
 .signup a {
-    font-size: 1.1em;
-    margin-top: -3px;
+  font-size: 1.1em;
+  margin-top: -3px;
 }
 
 .signup p {
-	margin-right: 10px;
-    font-size: 0.9em;
+  margin-right: 10px;
+  font-size: 0.9em;
 }
 
 .more {
-	font-size: 0.8em;
+  font-size: 0.8em;
 }
 
 .more a {
-	color: rgb(17, 108, 228);
+  color: rgb(17, 108, 228);
 }
 
-.signupa, .morea, .firstLineA{
-    text-decoration: none;
+.signupa,
+.morea,
+.firstLineA {
+  text-decoration: none;
 }
 
 .signupa:hover,
 .morea:hover,
-.firstLineA:hover{
-	text-decoration: underline;
+.firstLineA:hover {
+  text-decoration: underline;
 }
