--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,11 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap");
 
 .navbar {
-  min-height: 11vh;
+  height: 10vh;
   background: #fe8235;
   font-family: "Maven Pro", sans-serif;
   font-weight: 600;
-  /* border: 10px solid rebeccapurple; */
+  /* border: 5px solid rebeccapurple; */
 }
 
 .navbar-brand {
@@ -23,11 +23,9 @@
     padding: 6px 3.5px;
     padding-bottom: 3px;
   }
-}
-
-@media screen and (max-width: 767px) {
   .navbar {
-    min-height: 9vh;
+    height: 5vh;
+    padding-bottom: 60px;
   }
 }
 
