--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -38,7 +38,7 @@
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.5);
 }
 
-.counting {
+/* .counting {
   color: white;
   background-color: black;
   font-size: 14px;
@@ -48,7 +48,7 @@
   padding: 1px 5px;
   margin-right: 10px;
   font-weight: 700;
-}
+} */
 
 .card-details-img {
   max-height: 25px;
