--- a/src/Components/ShopFeed/GirlsField/Feeds/Girlsfeed.css
+++ b/src/Components/ShopFeed/GirlsField/Feeds/Girlsfeed.css
@@ -4,7 +4,6 @@
   position: relative;
   font-family: "Maven Pro", sans-serif;
   padding: 25px 35px 0px 35px;
-  /* border: 2px solid red; */
 }
 
 @media screen and (max-width: 400px) {
@@ -12,4 +11,12 @@
     max-height: 400px;
     padding: 25px 25px 0px 25px;
   }
+}
+ 
+.ddd{
+  width: 100%;
+   height: 90%; 
+   display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
