--- a/src/Components/Shoppy/BoysShop/Boysshoppy.css
+++ b/src/Components/Shoppy/BoysShop/Boysshoppy.css
@@ -10,21 +10,24 @@
 }
 
 .bShoppy {
+  min-height: 100vh;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  margin: 30px 0px 0px 0px;
   justify-content: center;
-  margin: 50px 0 0 40px;
+  /* border: 2px solid red; */
 }
 
-.shoppyCards {
-  margin: 0px 8px 150px 0px;
+.BshoppyCards {
+  margin: 0px 0px 150px 0px;
 }
 
-.btn {
+.btn { 
   border: none;
   font-size: large;
 }
+
 .btn:hover {
   color: #fe8235;
   background: black;
