--- a/src/Components/Shoppy/GirlsShop/Girlsshoppy.css
+++ b/src/Components/Shoppy/GirlsShop/Girlsshoppy.css
@@ -10,15 +10,18 @@
 }
 
 .gShoppy {
+  width: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  margin: 30px 0px 0px 0px;
   justify-content: center;
-  margin: 50px 0 0 40px;
+  /* border: 2px solid red; */
 }
 
-.shoppyCards {
-  margin: 0px 8px 150px 0px;
+.GshoppyCards {
+  margin: 0px 0px 150px 0px;
 }
 
 .btn {
