--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,9 +1,8 @@
 /* footer css */
-
 .bg-footer {
-  background-color: #000;
-  padding: 20px 25px 0px;
-  /* border: 1px solid red; */
+  background-color: #111111;
+  padding: 30px 25px 0px;
+  border: 1px solid #16161d;
   font-family: "Maven Pro", sans-serif;
 }
  
@@ -12,25 +11,15 @@
   width: 100%;
   /* border: 1px solid red; */
 }
+
 .fCol {
   /* border: 1px solid red; */
+
+  display: flex;
+  flex-direction: column;
+  place-items: center;
   width: auto;
 }
-
-@media screen and (max-width: 991px) {
-  .fCol {
-    margin-bottom: 20px;
-  }
-  .container {
-    margin-bottom: -50px;
-  }
-}
-
-/* @media screen and (max-width: 575px) {
-  .footer-link, .contact-info {
-    display: none;
-  }
-} */
 
 .footer-heading {
   letter-spacing: 3px;
@@ -88,4 +77,35 @@
   position: relative;
   top: 5px;
   font-weight: 500;
+}
+
+@media screen and (max-width: 991px) {
+  .fCol {
+    margin-bottom: 20px;
+  }
+  .container {
+    margin-bottom: -50px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .footer-link, .contact-info, .smicon {
+    display: none;
+  }
+
+  .container {
+    margin-bottom: -35px;
+  }
+
+  .footer-alt, .footer-heading {
+    font-size: 14px;
+  }
+
+  .footer-heading {
+    width: 110px;
+    margin-bottom: -5px;
+    padding-bottom: 5px;
+  }
+  
+  
 }
