--- a/src/Components/SelectedProducts/SPMap.css
+++ b/src/Components/SelectedProducts/SPMap.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin: 50px 0 0 0;
+  margin: 30px 0px 0px 0px;
   /* border: 2px solid red; */
   justify-content: center;
 }
