--- a/src/Components/ShopFeed/BoysField/Feeds/Boysfeed.css
+++ b/src/Components/ShopFeed/BoysField/Feeds/Boysfeed.css
@@ -1,15 +1,22 @@
 .Boysfeed {
-  height: 450px;
+  height: 430px;
   background: black;
   position: relative;
   font-family: "Maven Pro", sans-serif;
   padding: 25px 35px 0px 35px;
-  /* border: 3px solid blue; */
+  /* border: 2px solid blue;  */
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 575px) {
   .Boysfeed {
-    max-height: 400px;
+    max-height: 350px;
     padding: 25px 25px 0px 25px;
   }
+} 
+
+@media screen and (max-width: 340px) {
+  .Boysfeed {
+    max-height: 315px;
+    padding: 25px 25px 0px 25px;
+  } 
 }
