--- a/src/Components/ShopFeed/GirlsField/Feeds/Girlsfeed.css
+++ b/src/Components/ShopFeed/GirlsField/Feeds/Girlsfeed.css
@@ -1,15 +1,23 @@
 .Girlsfeed {
-  height: 450px;
-  background: black;
-  position: relative;
+  height: 430px;
   font-family: "Maven Pro", sans-serif;
   padding: 25px 35px 0px 35px;
+  /* border: 3px solid blue; */
+  margin-bottom: -10px;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 575px) {
   .Girlsfeed {
-    max-height: 400px;
+    max-height: 345px;
     padding: 25px 25px 0px 25px;
-  }
+    margin-bottom: -10px;
+  } 
+}
+  
+@media screen and (max-width: 340px) {
+  .Girlsfeed {
+    max-height: 315px;
+    padding: 25px 25px 0px 25px;
+  } 
 }
   
