--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,8 +1,8 @@
 /* footer css */
 .bg-footer {
-  background-color: #111111;
+  background-color: #100c0c;
   padding: 30px 25px 0px;
-  border: 1px solid #16161d;
+  border: 1px solid #100c0c;
   font-family: "Maven Pro", sans-serif;
 }
  
@@ -76,7 +76,6 @@
 .copyright {
   position: relative;
   top: 5px;
-  font-weight: 500;
 }
 
 @media screen and (max-width: 991px) {
@@ -97,15 +96,22 @@
     margin-bottom: -35px;
   }
 
-  .footer-alt, .footer-heading {
+  .footer-alt {
     font-size: 14px;
   }
 
   .footer-heading {
-    width: 110px;
+    font-size: 12px;
+  }
+
+  .footer-heading {
+    width: 75px;
     margin-bottom: -5px;
     padding-bottom: 5px;
   }
   
+  .bg-footer {
+    padding: 30px 21px 0px;
+  }
   
 }
